--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
     For example, one could use this information and see the path the hero of the book travelled from the beginning to
     the end.
 </h4>
-<div id="progress"></div>
-<span class='counter-of-markers'>Added markers count</span>:<span id="totalAddedMarker"></span>
+<div id="progress" style="color: white"></div>
+<span class='counter-of-markers'>Added markers count</span>:<span id="totalAddedMarker" style="color: white"></span>
 <div id="map"></div>
 <div class="buttons-container">
     <button id="myBtn" type="button" class="btn btn-info">Reset Map</button>
